k8s-local/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wallet-service
  template:
    metadata:
      labels:
        app: wallet-service
    spec:
      containers:
        - name: wallet-service
          image: ghcr.io/vineet311/wallet/wallet:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: wallet-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: wallet-service
  ports:
    - name: http
      port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ledger-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ledger-service
  template:
    metadata:
      labels:
        app: ledger-service
    spec:
      containers:
        - name: ledger-service
          image: ghcr.io/vineet311/wallet/ledger:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: ledger-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ledger-service
  ports:
    - name: http
      port: 9090
      targetPort: 9090
